# sound

./: run.sh
docs/: WhisperSeg_Voice_Activity_Detection_Demo.ipynb
emotion-dubbing/: README.md  docker-compose.yml  docker-compose.yml.new  pyproject.toml  setup.py
emotion-dubbing/config/: models.yaml  pipeline.yaml
emotion-dubbing/docker/emotion-features/: Dockerfile  Dockerfile.new  requirements.txt
emotion-dubbing/docker/emotion-features/scripts/: 1_transcribe_diarize_emotion.sh  align_speakers.py  analyze_prosody.py  extract_wav2vec2.py  parallel_inference.py  process_opensmile.py  transcribe.ps1
emotion-dubbing/docker/model-hub/: Dockerfile  Dockerfile.new  requirements.txt
emotion-dubbing/docker/model-hub/default_config/: models.yaml
emotion-dubbing/docker/model-hub/scripts/: model_manager.py
emotion-dubbing/docker/nemo-diarize/: Dockerfile  diarize.py
emotion-dubbing/docker/whisper-jp/: Dockerfile
emotion-dubbing/docker/whisper-jp/scripts/: whisper_wrapper.py
emotion-dubbing/output/: transcription.json  transcription.txt
emotion-dubbing/scripts/: batch_process.py  run_pipeline.ps1  run_pipeline.py  run_pipeline.sh  utils.py  verify_setup.py
emotion-dubbing/src/: __init__.py  audio_processing.md  audio_processing.py
emotion-dubbing/src/config/: config_manager.py
emotion-dubbing/src/emotion/: emotion_analyzer.py
emotion-dubbing/src/processors/: base_processor.py
emotion-dubbing/tests/: __init__.py  base_test.py  test_audio_processing.py  test_audio_processor.py
emotion-dubbing/tests/data/: models.yaml  pipeline.yaml
