[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emotion-dubbing"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Emotion-preserving dubbing pipeline"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/username/emotion-dubbing"
"Bug Tracker" = "https://github.com/username/emotion-dubbing/issues"
